--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "ethers": "^6.14.4",
     "graphql-request": "^6.1.0",
     "ipfs-http-client": "^60.0.0",
-    "neo4j-driver": "^5.15.0"
+    "neo4j-driver": "^5.28.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
