--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
+    "@helia/unixfs": "^5.0.3",
+    "@playwright/test": "^1.53.1",
+    "blockstore-core": "^5.0.4",
     "ethers": "^6.14.4",
     "graphql-request": "^6.1.0",
-    "ipfs-http-client": "^60.0.0",
+    "helia": "^5.4.2",
+    "multiformats": "^13.3.7",
     "neo4j-driver": "^5.28.1",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
-    "babel-jest": "^30.0.0",
     "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.2"
   }
