--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "posttest": "npx open-cli ./reports/test-report.html"
   },
   "dependencies": {
     "@helia/unixfs": "^5.0.3",
@@ -12,6 +13,7 @@
     "ethers": "^6.14.4",
     "graphql-request": "^6.1.0",
     "helia": "^5.4.2",
+    "ipfs-http-client": "^60.0.1",
     "multiformats": "^13.3.7",
     "neo4j-driver": "^5.28.1",
     "node-fetch": "^3.3.2"
